# Humanoid

./: Dockerfile  cleanup_and_build.sh  clear_port.sh  compose.yml
catkin_ws/src/bringup/launch/: real.launch  sim.launch
catkin_ws/src/controls/: CMakeLists.txt  package.xml
catkin_ws/src/controls/launch/: mpc.launch  playback.launch  policy_control.launch  record.launch  sine.launch
catkin_ws/src/controls/src/: create_hardcoded_sequence.py  fast_mpc.cpp  keyframes.csv  keyframes_manual.csv  keyframes_template.csv  mpc.py  play_hardcoded_sequence.py  policy_control.py  sine_control.py  state_generator.py
catkin_ws/src/hardware/: CMakeLists.txt  package.xml
catkin_ws/src/hardware/launch/: imu.launch  interface.launch  rosserial.launch
catkin_ws/src/hardware/src/: hardware_interface.cpp  hardware_interface.py
catkin_ws/src/hardware_interface/: CMakeLists.txt  package.xml
catkin_ws/src/hardware_interface/launch/: hardware_interface.launch
catkin_ws/src/hardware_interface/src/: hardware_interface.py
catkin_ws/src/humanoid_msgs/: CMakeLists.txt
catkin_ws/src/humanoid_msgs/msg/: HardwareServoCommand.msg  HardwareServoFeedback.msg  ServoCommand.msg  ServoFeedback.msg
catkin_ws/src/unity/launch/: endpoint.launch
catkin_ws/src/unity/src/: unity_bridge.py
catkin_ws/src/unity/src/ros_tcp_endpoint/: client.py  publisher.py  server.py  tcp_sender.py  unity_service.py
catkin_ws/src/vision/: package.xml
catkin_ws/src/xsens_ros_mti_driver/launch/: xsens_mti_node.launch
catkin_ws/src/xsens_ros_mti_driver/param/: xsens_mti_node.yaml
catkin_ws/src/xsens_ros_mti_driver/src/: imu.py
