<?xml version="1.0"?>
<package format="2">
  <name>controls</name>
  <version>0.1.0</version>
  <description>Package that controls the humanoid robot at the servo/joint level.</description>
  <maintainer email="mcgill.humanoid@gmail.com">McGill Humanoid</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>humanoid_msgs</depend> 
  <depend>geometry_msgs</depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
