<?xml version="1.0"?>
<package format="2">
  <name>hardware</name>
  <version>0.1.0</version>
  <description>Package to interface with hardware on humanoid robot, namely the cameras, IMU, motors, and serial sensors.</description>
  <maintainer email="mcgill.humanoid@gmail.com">McGill Humanoid</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>humanoid_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>python3-numpy</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf</depend>

</package>
